# l4-engine

./: .gitignore  LICENSE.md  Makefile  README.md  l4-engine.cabal  l4-engine.sln  uci-interface.txt
gtest-1.7.0/lib/: README
gtest-1.7.0/lib/Debug/: gtest_main-mdd.lib  gtestd.lib
gtest-1.7.0/lib/Release/: gtest.lib  gtest_main-md.lib
gtest-1.7.0/msvc/: UpgradeLog.htm  gtest-md.sln  gtest-md.vcxproj  gtest_main-md.vcxproj  gtest_prod_test-md.vcxproj  gtest_unittest-md.vcxproj
haskell/: Main.hs  main.hs
l4-engine/: Makefile  bitboard.c  bitboard.cpp  chessboard.cpp  fen.c  l4-engine.vcxproj  l4engine.h  main.c  main.cpp  search.cpp  uci.c  uci.cpp
oldsrc/: fen.c  main.c  moves.c  search.c
src/: L4Engine.hs  Main.hs
test/: L4EngineSpec.hs  MainSpec.hs
tests/: test1.cpp  test1.txt  test_bitboard.cpp  test_fen.cpp  test_main.cpp  test_moves.cpp  test_search.cpp  test_uci.cpp  tests.vcxproj
