
name:                l4-engine
version:             0.1.0.0
synopsis:            UCI chess engine
-- description:
license:             MIT
license-file:        LICENSE.md
author:              george-lamperis
maintainer:          george.lamperis@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable l4-engine
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >=4.6 && <4.7, split >=0.2 && <0.3
  default-language:    Haskell2010

test-suite hspec
    build-depends:    base, split,   hspec
    default-language: Haskell2010
    hs-source-dirs:   test, src
    main-is:          MainSpec.hs
    type:             exitcode-stdio-1.0
