
name:                l4-engine
version:             0.1.0.0
synopsis:            UCI chess engine
-- description:
license:             MIT
license-file:        LICENSE.md
author:              george-lamperis
maintainer:          george.lamperis@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     L4Engine
  build-depends:       base >=4.6 && <4.7, split >=0.2 && <0.3
  hs-source-dirs:      src
  default-language:    Haskell2010

executable l4-engine
  main-is:             Main.hs
  build-depends:       base >=4.6 && <4.7, split >=0.2 && <0.3, l4-engine
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    build-depends:    base, hspec, l4-engine
    hs-source-dirs:   test
    default-language: Haskell2010
